x_tmp_not_used/calibre-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: calibre-web
spec:
  selector:
    app: calibre-web
  ports:
  - port: 8083
    targetPort: 8083
